tagger does not write temporary output files for tagging anymore